--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
     let score = 0;
     let count =0;
     function vaCham() {
-if(count==bricks.length){
-    alert('chúc mừng em đã có được tôi !!!')
-}
+        if(count==bricks.length){
+            alert('chúc mừng em đã có được tôi !!!')
+            return;
+        }
         bricks.forEach(function (b) {
             if (!b.status)
                 return;
@@ -107,9 +108,6 @@ if(count==bricks.length){
         ctx.font = "bold 20px black, sans-serif"
         ctx.fillStyle = "#FFFFFF"
         ctx.fillText("Score : "+ score,10,30);
-
-
-
     }
     function ve() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
